testdata/typechecker/error/classes/portfolio_DupeFieldNameCompat.java
// Tests that duplicate but compatible fields error.

int main() {
    return 0;
}

class DupeFieldNameCompatClass {
    int x;
    int x;
}
